--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and deploy package
+name: Build and Test - Main
 
 on:
   push:
@@ -21,8 +21,8 @@ jobs:
         flutter-version: "2.0.1"
         channel: "stable"
 
-    - name: Build package
+    - name: Build Application
       run: flutter pub get
     
-    - name: Test
+    - name: Execute Test
       run: flutter test --coverage
