--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
+  # Framework para responsividade
+  flutter_screenutil: ^5.0.0-nullsafety.11  
   # Framework para gerência de estado/injeção de dependência/navegação, etc...
   get: ^4.0.0-nullsafety.2
   # Package para animações
